# mvp

./: README.md  env.sh  launch.sh  project.charter.yaml  pyproject.toml  run_qwen_mvp.sh
planner/: graph_memory.py  planner.py
planner_out/: tasks.json
providers/: base.py  openai_like.py
src/your_project/: __init__.py  cli.py
src/your_project/services/: user_service.py
src/your_project_name/: cli.py
tests/: test_user_service_property.py  test_user_service_unit.py
tools/: ochestrator.py  oracle.py  orchestrator.py  scaffold.py
